--- a/src/Components/Main/TypesOfArmyAndComanders/BlockCollection/BlockCollection.module.scss
+++ b/src/Components/Main/TypesOfArmyAndComanders/BlockCollection/BlockCollection.module.scss
@@ -2,6 +2,12 @@
   .SubTitle {
     color: #acacac;
   }
+  h1 {
+    text-align: center;
+  }
+  h3 {
+    text-align: center;
+  }
   .Types {
     margin-top: 5%;
     display: grid;
