--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -19,5 +19,21 @@
   .Logo {
     color: #fff;
     text-decoration: none;
+
+    @media (min-width: 200px) {
+      font-size: 15px;
+    }
+    @media (min-width: 400px) {
+      font-size: 20px;
+    }
+    @media (min-width: 720px) {
+      font-size: 30px;
+    }
+    @media (min-width: 1280px) {
+      font-size: 50px;
+    }
+    @media (min-width: 1980px) {
+      font-size: 90px;
+    }
   }
 }
