--- a/src/Components/Main/TypesOfArmyAndComanders/BlockCollection/BlockCollection.module.scss
+++ b/src/Components/Main/TypesOfArmyAndComanders/BlockCollection/BlockCollection.module.scss
@@ -1,4 +1,5 @@
 .main {
+  margin-top: 20px;
   .SubTitle {
     color: #acacac;
   }
@@ -29,7 +30,7 @@
     @media (min-width: 1700px) {
       grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     }
-    gap: 15px 15px;
+    gap: 30px 15px;
     grid-auto-flow: row;
   }
 }
