change global font

--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: myFirstFont;
+  font-family: SexyUkrainianFont;
   src: url(../../assets/fonts/Blagovest.ttf);
 }
 
@@ -8,10 +8,9 @@
   margin: 0;
 
   width: calc(100% - 40px);
-  height: 40px;
+  height: 20%;
 
-  font-size: 2rem;
-  font-family: myFirstFont;
+  font-family: SexyUkrainianFont;
 
   background-color: #1e1e1e;
   border-bottom: #000 1px solid;
