add mui and headbar hiding on scroll

--- a/src/Components/App/App.module.scss
+++ b/src/Components/App/App.module.scss
@@ -1,4 +1,10 @@
 * {
   padding: 0;
   margin: 0;
+  .unofficial {
+    position: sticky;
+    text-align: end;
+    bottom: 10px;
+    color: red;
+  }
 }
