--- a/src/Components/Main/TypesOfArmyAndComanders/BlockCollection/Block/Block.module.scss
+++ b/src/Components/Main/TypesOfArmyAndComanders/BlockCollection/Block/Block.module.scss
@@ -33,7 +33,9 @@
       }
     }
   }
-
+  .front:hover {
+    box-shadow: 0px 0px 15px -4px #fff;
+  }
   .back {
     border-radius: 20px;
     height: 300px;
