--- a/src/Components/App/App.module.scss
+++ b/src/Components/App/App.module.scss
@@ -3,7 +3,10 @@
   margin: 0;
   .unofficial {
     position: sticky;
-    text-align: end;
+    background-color: #1e1e1e;
+    border: 1px solid #000;
+    width: 20%;
+    float: right;
     bottom: 10px;
     color: red;
   }
