--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -19,24 +19,16 @@
   display: flex;
   justify-content: space-around;
   .HeaderText {
+    width: 100%;
+    height: 100%;
     color: #fff;
     text-decoration: none;
+    text-align: center;
 
-    @media (min-width: 200px) {
-      font-size: 15px;
-    }
-    @media (min-width: 400px) {
-      font-size: 20px;
-    }
-    @media (min-width: 720px) {
-      font-size: 25px;
-    }
-    @media (min-width: 1280px) {
-      font-size: 30px;
-    }
-    @media (min-width: 1980px) {
-      font-size: 35px;
-    }
+    font-size: 0.9rem;
+  }
+  .HeaderText:hover {
+    background-color: red;
   }
   .Logo {
     float: left;
